<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabsWithSwipe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    
    <string name="main_bal">MAIN BALANCE</string>
    <string name="enter">ENTER</string>
    
    <string name="add_bal">ADD MORE BALANCE</string>
    <string name="done">DONE</string>
    <string name="deduct_bal">DEDUCT BALANCE</string>
    
    <string name="added">ADDED EXTRA :</string>
    <string name="spent">SPENT :</string>
    <string name="total">TOTAL :</string>
    <string name="main_balance">MAIN BALANCE :</string>
    
    <string name="opening_bal">OPENING BALANCE :</string>
    <string name="closing_bal">CLOSING BALANCE :</string>
    
    <string name="calendar_view">CALENDAR VIEW</string>
    <string name="date">DATE</string>
    
    <string name="amt_added">Amount Added :</string>
    <string name="amt_deducted">Amount Deducted :</string>
    
    
    

</resources>
